--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@privy-io/react-auth": "2.13.2",
-    "@types/node": "^20.11.0",
+    "@types/node": "^24.0.0",
     "@types/react": "18.2.48",
     "@types/react-dom": "^18.2.18",
     "@zkpassport/sdk": "0.12.4",
@@ -34,7 +34,7 @@
     "vercel": "^32.5.3"
   },
   "engines": {
-    "node": ">=18.x",
+    "node": ">=24.0.0",
     "npm": ">=8.x"
   },
   "resolutions": {
