--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,11 @@
   "buildCommand": "npm install && npm run build",
   "outputDirectory": ".next",
   "functions": {
-    "runtime": "nodejs20.x"
+    "api/**": {
+      "runtime": "nodejs20.x"
+    },
+    "pages/api/**": {
+      "runtime": "nodejs20.x"
+    }
   }
 } 
