--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@privy-io/react-auth": "2.13.2",
+    "@types/node": "20.11.0",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
     "@zkpassport/sdk": "0.12.4",
     "autoprefixer": "10.4.21",
     "buffer": "6.0.3",
@@ -23,17 +26,12 @@
     "react-qr-reader": "3.0.0-beta-1",
     "stream-browserify": "3.0.0",
     "tailwindcss": "3.4.17",
+    "typescript": "5.3.3",
     "util": "0.12.5",
     "viem": "1.19.9"
   },
-  "devDependencies": {
-    "@types/node": "20.11.0",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
-    "typescript": "5.3.3"
-  },
   "engines": {
-    "node": "20.x"
+    "node": "24.x"
   },
   "resolutions": {
     "viem": "1.19.9"
