--- a/env.example
+++ b/env.example
@@ -4,11 +4,10 @@ NEXT_PUBLIC_PRIVY_APP_ID=your_privy_app_id
 # Server-only secrets
 PRIVY_APP_SECRET=your_privy_app_secret
 
-# Backend signer for gasless NFT minting (SponsorContract authorized signer)
-BACKEND_SIGNER_PRIVATE_KEY=0x_your_private_key_here
-
-# Biconomy configuration (optional)
-BICONOMY_API_KEY=your_biconomy_api_key
-BICONOMY_PAYMASTER_URL=https://paymaster.example
-BICONOMY_PAYMASTER_ID=your_paymaster_id
-BICONOMY_BUNDLER_URL=https://bundler.example
+# Gas Sponsorship Configuration
+# Configure gas sponsorship in your Privy Dashboard:
+# 1. Go to https://dashboard.privy.io
+# 2. Navigate to Gas Sponsorship section
+# 3. Enable gas sponsorship for your app
+# 4. Add supported networks (Base, Ethereum, Optimism, Unichain)
+# 5. Add sponsorship credits to your account balance
