Simplify Swag frontend: use Privy native gas sponsorship instead of Wagmi
- Removed PrivyWagmiBridge component and its import from _app.tsx
- Rewrote useProductCreation.ts to use Privy's useSendTransaction() with sponsor flag
- Rewrote useSwagStore.ts to use:
  - Privy's useSendTransaction() for contract writes (approve, buy)
  - viem's createPublicClient().readContract() wrapped in React Query for reads
  - All transactions now have sponsor: true for gas sponsorship
- Added getChainRpc() helper to config/networks.ts for RPC URL lookup
- Updated all contract interactions to use encodeFunctionData for calldata
- Removed unnecessary Wagmi hooks (useReadContract, useWriteContract)
- Maintained full gas sponsorship support via Privy's native implementation

This follows the clean, simple pattern requested: no extra complexity, leveraging existing gas sponsorship infrastructure.

--- a/env.example
+++ b/env.example
@@ -1,8 +1,29 @@
 # Client-visible (required by Privy SDK)
 NEXT_PUBLIC_PRIVY_APP_ID=your_privy_app_id
+NEXT_PUBLIC_DEFAULT_CHAIN_ID=8453
+
+# Swag1155 Contracts
+NEXT_PUBLIC_SWAG1155_ADDRESS_BASE=0x8a4A23F111F2674116368d2960e4AC9B5ea81Da7
+NEXT_PUBLIC_SWAG1155_ADDRESS_ETHEREUM=0x25B43cE10ffD04Cb90123D7582E6B5100B27f9cB
+NEXT_PUBLIC_SWAG1155_ADDRESS_UNICHAIN=0x46Fb79966210f4d2C3c1Fb1a5c05330B401FDf5C
+
+# USDC Addresses
+NEXT_PUBLIC_USDC_ADDRESS_BASE=0x833589fCD6eDb6E08f4c7C32D4f71b1566469C5d
+NEXT_PUBLIC_USDC_ADDRESS_ETHEREUM=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
+NEXT_PUBLIC_USDC_ADDRESS_UNICHAIN=0x5a1b40E9B1c89b2B72D0c7c1b45C07e9e6d55dCd
+
+# Optional RPC Overrides
+NEXT_PUBLIC_BASE_RPC_URL=https://mainnet.base.org
+NEXT_PUBLIC_MAINNET_RPC_URL=https://eth.llamarpc.com
+NEXT_PUBLIC_UNICHAIN_RPC_URL=https://rpc.unichain.org
 
 # Server-only secrets
 PRIVY_APP_SECRET=your_privy_app_secret
+
+# Pinata
+PINATA_JWT=your_jwt_here
+PINATA_GATEWAY=https://gateway.pinata.cloud/ipfs
+NEXT_PUBLIC_PINATA_GATEWAY=https://gateway.pinata.cloud/ipfs
 
 # Gas Sponsorship Configuration
 # Configure gas sponsorship in your Privy Dashboard:
