--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pinata/sdk": "2.1.0",
     "@privy-io/react-auth": "2.13.2",
+    "@tanstack/react-query": "5.90.16",
+    "@tanstack/react-query-devtools": "5.91.2",
     "@types/node": "20.11.0",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
@@ -17,6 +20,7 @@
     "autoprefixer": "10.4.21",
     "buffer": "6.0.3",
     "crypto-browserify": "3.12.1",
+    "ethers": "6.16.0",
     "next": "14.2.35",
     "postcss": "8.5.3",
     "process": "0.11.10",
@@ -28,12 +32,18 @@
     "tailwindcss": "3.4.17",
     "typescript": "5.3.3",
     "util": "0.12.5",
-    "viem": "1.19.9"
+    "viem": "1.19.9",
+    "wagmi": "3.3.2",
+    "zustand": "5.0.10"
   },
   "engines": {
     "node": "24.x"
   },
   "resolutions": {
     "viem": "1.19.9"
+  },
+  "devDependencies": {
+    "eslint": "8.57.1",
+    "eslint-config-next": "^14.2.3"
   }
 }
