upgrading front, adding swag, improving wallet

--- a/env.example
+++ b/env.example
@@ -7,6 +7,9 @@ NEXT_PUBLIC_SWAG1155_ADDRESS_BASE=0x8a4A23F111F2674116368d2960e4AC9B5ea81Da7
 NEXT_PUBLIC_SWAG1155_ADDRESS_ETHEREUM=0x25B43cE10ffD04Cb90123D7582E6B5100B27f9cB
 NEXT_PUBLIC_SWAG1155_ADDRESS_UNICHAIN=0x46Fb79966210f4d2C3c1Fb1a5c05330B401FDf5C
 
+# Admin address (for access control)
+NEXT_PUBLIC_ADMIN_ADDRESS=0x1fd2A56907B1db9B29c2D8F0037b6D4E104f5711
+
 # USDC Addresses
 NEXT_PUBLIC_USDC_ADDRESS_BASE=0x833589fCD6eDb6E08f4c7C32D4f71b1566469C5d
 NEXT_PUBLIC_USDC_ADDRESS_ETHEREUM=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
