--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@pinata/sdk": "2.1.0",
-    "@privy-io/react-auth": "2.13.2",
+    "@privy-io/react-auth": "^2.14.0",
     "@tanstack/react-query": "5.90.16",
     "@tanstack/react-query-devtools": "5.91.2",
     "@types/node": "20.11.0",
