--- a/env.example
+++ b/env.example
@@ -8,16 +8,17 @@ NEXT_PUBLIC_SWAG1155_ADDRESS_ETHEREUM=0x25B43cE10ffD04Cb90123D7582E6B5100B27f9cB
 NEXT_PUBLIC_SWAG1155_ADDRESS_UNICHAIN=0x46Fb79966210f4d2C3c1Fb1a5c05330B401FDf5C
 
 # Admin address (for access control)
-NEXT_PUBLIC_ADMIN_ADDRESS=0x1fd2A56907B1db9B29c2D8F0037b6D4E104f5711
+NEXT_PUBLIC_ADMIN_ADDRESS=0x3B89Ad8CC39900778aBCdcc22bc83cAC031A415B
 
 # USDC Addresses
 NEXT_PUBLIC_USDC_ADDRESS_BASE=0x833589fCD6eDb6E08f4c7C32D4f71b1566469C5d
 NEXT_PUBLIC_USDC_ADDRESS_ETHEREUM=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
 NEXT_PUBLIC_USDC_ADDRESS_UNICHAIN=0x5a1b40E9B1c89b2B72D0c7c1b45C07e9e6d55dCd
 
-# Optional RPC Overrides
+# Optional RPC Overrides (use your own Infura/Alchemy keys for production)
 NEXT_PUBLIC_BASE_RPC_URL=https://mainnet.base.org
 NEXT_PUBLIC_MAINNET_RPC_URL=https://eth.llamarpc.com
+NEXT_PUBLIC_OPTIMISM_RPC_URL=https://mainnet.optimism.io
 NEXT_PUBLIC_UNICHAIN_RPC_URL=https://rpc.unichain.org
 
 # Server-only secrets
