--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -rf node_modules package-lock.json .next",
+    "clean:install": "npm run clean && npm install",
+    "clean:build": "npm run clean && npm install && npm run build",
+    "postinstall": "npx update-browserslist-db@latest || true"
   },
   "dependencies": {
     "@pinata/sdk": "2.1.0",
@@ -41,6 +45,15 @@
   },
   "resolutions": {
     "viem": "1.19.9"
+  },
+  "overrides": {
+    "ws": "^8.18.0",
+    "h3": "^1.12.0",
+    "axios": "^1.7.9",
+    "glob": "^11.0.0",
+    "preact": "^10.25.0",
+    "elliptic": "^6.0.0",
+    "brace-expansion": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "8.57.1",
