fixing the flow to claim swag tokenized

--- a/env.example
+++ b/env.example
@@ -55,6 +55,30 @@ NEXT_PUBLIC_PINATA_GATEWAY=https://gateway.pinata.cloud/ipfs
 # -----------------------------------------------------------------------------
 
 # =============================================================================
+# TOKEN ADDRESSES (Optional - defaults provided)
+# =============================================================================
+# Standard token addresses (USDC, USDT, EURC) can be overridden here
+# If not set, defaults from utils/network.ts will be used
+# -----------------------------------------------------------------------------
+# Base Network
+# NEXT_PUBLIC_USDC_BASE=0x833589fCD6eDb6E08f4c7C32D4f71b1566469C5d
+# NEXT_PUBLIC_USDT_BASE=0xfde4C96c8593536E31F229EA8f37b2ADa2699bb2
+# NEXT_PUBLIC_EURC_BASE=0x60a3E35Cc302bFA44Cb288Bc5a4F316Fdb1adb42
+#
+# Ethereum Network
+# NEXT_PUBLIC_USDC_ETHEREUM=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
+# NEXT_PUBLIC_USDT_ETHEREUM=0xdAC17F958D2ee523a2206206994597C13D831ec7
+# NEXT_PUBLIC_EURC_ETHEREUM=0x1aBaEA1f7C830bD89Acc67eC4af516284b1bC33c
+#
+# Optimism Network
+# NEXT_PUBLIC_USDC_OPTIMISM=0x7F5c764cBc14f9669B88837ca1490cCa17c31607
+# NEXT_PUBLIC_USDT_OPTIMISM=0x94b008aA00579c1307B0EF2c499aD98a8ce58e58
+#
+# Unichain Network
+# NEXT_PUBLIC_USDC_UNICHAIN=0x078D782b760474a361dDA0AF3839290b0EF57AD6
+# =============================================================================
+
+# =============================================================================
 # CONTRACT ADDRESSES
 # =============================================================================
 # Contract addresses are loaded from: frontend/addresses.json
