Enable sending 1UP token from wallet

--- a/.env.example
+++ b/.env.example
@@ -70,13 +70,14 @@ NEXT_PUBLIC_POAP_API_KEY=your_poap_api_key_here
 # =============================================================================
 # TOKEN ADDRESSES (Optional - defaults provided)
 # =============================================================================
-# Standard token addresses (USDC, USDT, EURC) can be overridden here
+# Standard token addresses (USDC, USDT, EURC, 1UP) can be overridden here
 # If not set, defaults from utils/network.ts will be used
 # -----------------------------------------------------------------------------
 # Base Network
 # NEXT_PUBLIC_USDC_BASE=0x833589fCD6eDb6E08f4c7C32D4f71b1566469C5d
 # NEXT_PUBLIC_USDT_BASE=0xfde4C96c8593536E31F229EA8f37b2ADa2699bb2
 # NEXT_PUBLIC_EURC_BASE=0x60a3E35Cc302bFA44Cb288Bc5a4F316Fdb1adb42
+# NEXT_PUBLIC_1UP_BASE=0xf6813c71e620c654ff6049a485e38d9494efabdf
 #
 # Ethereum Network
 # NEXT_PUBLIC_USDC_ETHEREUM=0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48
